# Lidar-1

lidar_package/segmentation_clustering/: CMakeLists.txt  package.xml
lidar_package/segmentation_clustering/include/: params.h  params.txt  processPointClouds.h
lidar_package/segmentation_clustering/include/render/: render.cpp
lidar_package/segmentation_clustering/launch/: rviz.launch  segmentation.launch  segmentation_params.yaml
lidar_package/segmentation_clustering/src/: bin.cc  ground_segmentation.cc  ground_segmentation_node.cc  processPointClouds.cpp  segment.cc
lidar_package/segmentation_clustering/src/include/: ground_segmentation.h  logging.h
