<?xml version="1.0"?>
<package format="2">
  <name>lidar_package</name>
  <version>0.0.1</version>
  <description>lidar_package</description>
  
  <maintainer email="cepefz00@hs-esslingen.de.de">Cedric Perauer</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>glog_catkin</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>  
  <depend>tf</depend>


  
</package>

